--- a/backend/.env
+++ b/backend/.env
@@ -37,7 +37,8 @@ CLOUDINARY_CLOUD_NAME=seu_cloud_name
 CLOUDINARY_API_KEY=xxxxxxxxxxxxxxxx
 CLOUDINARY_API_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://emprega-ai.vercel.app
+ALLOWED_ORIGINS=https://emprega-ai.vercel.app
 
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 
