--- a/package.json
+++ b/package.json
@@ -6,30 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "lucide-react": "^0.363.0",
-    "next": "^16.1.6",
-    "next-auth": "^4.24.13",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
-    "zod": "^3.23.8"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.24",
-    "babel-plugin-react-compiler": "^1.0.0",
-    "css": "^3.0.0",
-    "daisyui": "^5.5.18",
-    "post": "^0.0.1",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.10.2",
     "postcss": "^8.4.38",
-    "tailwind": "^4.0.0",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
 }
