--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "lucide-react": "^0.363.0",
-    "next": "14.2.3",
+    "next": "^14.2.10",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
