--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,12 @@
   "description": "Backend API para EMPREGA.AI - SaaS de Currículos com IA",
   "main": "src/server.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
-    "build": "tsc",
-    "test": "jest",
-    "lint": "eslint src/**/*.ts",
-    "format": "prettier --write \"src/**/*.{ts,js,json}\""
+  "build": "tsc", 
+  "start": "node dist/server.js",
+  "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+  "test": "jest",
+  "lint": "eslint src/**/*.ts",
+  "format": "prettier --write \"src/**/*.{ts,js,json}\""
   },
   "keywords": [
     "emprego",
