--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start -p ${PORT:-5000}",
+   "start": "ts-node server.ts",
+    "build": "tsc",
     "lint": "next lint"
   },
   "dependencies": {
