Organizando monorepo: frontend e backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Backend API para EMPREGA.AI - SaaS de Currículos com IA",
   "main": "src/server.js",
   "scripts": {
-  "build": "tsc", 
-  "start": "node dist/server.js",
+  "start": "npx ts-node src/server.ts",
+  "build": "tsc",
   "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
   "test": "jest",
   "lint": "eslint src/**/*.ts",
@@ -43,7 +43,9 @@
     "pdfkit": "^0.13.0",
     "puppeteer": "^21.7.0",
     "stripe": "^14.10.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1", 
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
