--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Backend API para EMPREGA.AI - SaaS de Currículos com IA",
   "main": "src/server.js",
+  "engines": {
+  "node": "20.x"
+},
   "scripts": {
   "start": "npx ts-node src/server.ts",
 
@@ -18,6 +21,7 @@
     "portugal",
     "saas"
   ],
+  
   "author": "EMPREGA.AI",
   "license": "ISC",
   "dependencies": {
