--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-   "start": "ts-node server.ts",
-    "build": "tsc",
-    "lint": "next lint"
+   "start": "next start",
+    "build": "next build",
+      "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.6.8",
