--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts",
     "next.config.js"
-  ],
+, "app/onboarding/types/cv.types"  ],
   "exclude": [
     "node_modules"
   ]
