--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,8 @@
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+  "paths": {
+      "@/*": ["./*"]
     }
   },
   "include": [
@@ -33,10 +31,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts",
-    "**/*.mts",
-    "next.config.js"
-, "app/types/cv.types.ts"  ],
+    "**/*.mts"
+  ],
   "exclude": [
     "node_modules"
   ]
