--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "lucide-react": "^0.363.0",
+    "mongose": "^0.0.2-security",
     "next": "^14.2.35",
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
