fix: Ajustando server

--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,4 @@ GOOGLE_CLIENT_ID=302747834419-t612bp2fe338jl2cmu8m339qoie3ta7i.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_SECRET=empregaaisaas090807060504030201
 NEXTAUTH_URL=http://localhost:3000
+MONGODB_URI=mongodb+srv://pablomota9955_db_user:a5cnYQebiGYrK1Cy@emprega-ai.ncllkdy.mongodb.net/production?retryWrites=true&w=majority&appName=emprega-ai
