--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=empregaai-api.railway.internal
+NEXT_PUBLIC_API_URL=empregaai-api-production-9249.up.railway.app
 NEXTAUTH_SECRET=seu_secret_nextauth_aqui
 NEXTAUTH_URL=http://localhost:3000
 GOOGLE_CLIENT_ID=302747834419-t612bp2fe338jl2cmu8m339qoie3ta7i.apps.googleusercontent.com
