--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "html2pdf.js": "^0.14.0",
+    "intl-tel-input": "^26.5.1",
     "lucide-react": "^0.363.0",
     "mongoose": "^9.2.1",
     "next": "^14.2.35",
