--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,9 @@
-NEXT_PUBLIC_API_URL=empregaai-api-production-9249.up.railway.app
+NEXT_PUBLIC_API_URL=mongodb+srv://pablomota9955_db_user:MVtJpSTYyfeQHeXK@emprega-ai.ncllkdy.mongodb.net/?appName=emprega-ai
+NEXT_PUBLIC_API_URL_LOCAL=http://localhost:5000
 NEXTAUTH_SECRET=seu_secret_nextauth_aqui
 NEXTAUTH_URL=http://localhost:3000
 GOOGLE_CLIENT_ID=302747834419-t612bp2fe338jl2cmu8m339qoie3ta7i.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_SECRET=empregaaisaas090807060504030201
 NEXTAUTH_URL=http://localhost:3000
-MONGODB_URI=mongodb+srv://pablomota9955_db_user:a5cnYQebiGYrK1Cy@emprega-ai.ncllkdy.mongodb.net/production?retryWrites=true&w=majority&appName=emprega-ai
+MONGODB_URI=mongodb+srv://pablomota9955_db_user:MVtJpSTYyfeQHeXK@emprega-ai.ncllkdy.mongodb.net/?appName=emprega-ai
